# latent-fair-value

./: Makefile  pyproject.toml
docs/: changes.md  gpt_notes.md  live_filter.md
notebooks/: compare_filters.ipynb  drop_sanity.ipynb  filter_results.ipynb  micro_1.5_3_mid_analysis.ipynb
notebooks/.ipynb_checkpoints/: compare_filters-checkpoint.ipynb
notebooks/basis_research/: 00_build_features.ipynb  01_test_eda.ipynb
scripts/: space_to_local.py
src/: data_collection.py  exceptions.py  main.py  market_feeds.py  measurement_manager.py  measurement_types.py
src/filters/: base_filter.py  kalman_filter.py  latent_state_types.py
src/sockets/: __init__.py  base_socket.py  hyperliquid_socket.py
src/ui/: __init__.py  server.py
tests/: test_data_collection.py  test_hyperliquid_socket.py  test_kalman_filter.py  test_main.py  test_ui_server.py
ui/: __init__.py  server.py
