[project]
name = "latent-spot-perp"
version = "0.1.0"
description = "Hyperliquid websocket streaming utilities."
authors = [{ name = "Cory Wagaman Eure" }]
requires-python = ">=3.11,<4.0"
dependencies = ["websockets>=12.0,<13.0"]

[tool.poetry]
package-mode = false

[dependency-groups]
dev = ["pytest>=8.3.5,<9.0.0", "ruff>=0.11.4,<0.12.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
